// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Saved Connector Details render for AWS schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.AWS
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            AWS demo
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          description
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            connector description
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            AWS_demo
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          tagsLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                demo
              </span>
            </span>
          </span>
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                test
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          credType
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            InheritFromDelegate
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.aws.crossAccURN
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            dummyRoleARN
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.aws.externalId
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            12345
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for Artifactory schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.Artifactory
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Artifacory One
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Artifacory_One
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.artifactory.artifactoryServerUrl
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            https://test-repo.blackducksoftware.com/artifactory/
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          credType
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Username and Password
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          username
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            harness-dev
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          password
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            account.connectorSecret
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for Docker schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.Docker
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            DockerName
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          description
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            This description is for Docker
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            DockerId
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          tagsLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                tag1
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.docker.dockerRegistryURL
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            docker Registry url
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          credType
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Username and Password
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          username
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            user name
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          password
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            account.secretname
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for GCP schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.GCP
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            GCP for demo
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          description
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Details
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            GCP_for_demo
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          tagsLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                GCP
              </span>
            </span>
          </span>
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                demo
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          credType
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            ManualConfig
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          encryptedKeyLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            account.GCP
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for GitHttp schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.Git
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            GitHttpName
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          description
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            This description is for Git
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            GitHttpId
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          tagsLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                tag1
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.git.urlType
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            REPO
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.git.connectionType
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            HTTP
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          UrlLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            url
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          username
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            user name
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          password
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            account.secretname
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for Inline K8s schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.Kubernetes
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            k8 With Tags
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          description
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            asasas
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            k8WithTags
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          tagsLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                connectot
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectionMode
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            InheritFromDelegate
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          delegate.delegateTags
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            primary
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for Manual K8s schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.Kubernetes
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            K8sName
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          description
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            This description is for K8s
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            k8sId
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectionMode
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            ManualConfig
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.k8.masterUrlLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            master url
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          credType
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Username and Password
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          username
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            user name
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          password
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            account.secretname
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for Nexus schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.Nexus
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Nexus one
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          description
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            testing nexus connector
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Nexus_one
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.nexus.nexusServerUrl
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            https://nexus2.harness.io
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          version
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            3.x
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          credType
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            Username and Password
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          username
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            dev
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          password
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            account.NexusPassword
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for Vault schema 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main detailsSectionContainer"
  >
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        overview
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          connectors.name_labels.SecretManager
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            VaultName
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          description
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            This description is for Vault
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          identifier
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
        >
          <span
            class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
          >
            VaultId
          </span>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small"
        >
          tagsLabel
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="Tag--main"
          >
            <span
              class="bp3-tag bp3-minimal"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                tag1
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main detailsSection"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
      >
        credentials
      </p>
    </div>
  </div>
</div>
`;

exports[`Saved Connector Details render for connector activity details 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main detailsSection"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
    >
      Connector Activity
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
      >
        connectorCreated
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
      >
        <span
          class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
        >
          09/27/2020 09:29 am
        </span>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
      >
        lastUpdated
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
      >
        <span
          class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
        >
          09/27/2020 09:30 am
        </span>
      </div>
    </div>
    <div
      class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small"
      >
        lastTested
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
      >
        <span
          class="StyledProps--font StyledProps--main detailsValue StyledProps--inline StyledProps--color StyledProps--color-black"
        >
          09/27/2020 09:30 am
        </span>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="bp3-icon bp3-icon-warning-sign StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-red500"
            icon="warning-sign"
          >
            <svg
              data-icon="warning-sign"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                failed
              </desc>
              <path
                d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline"
          >
            failed
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
